2002-11-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: env,rc: https_proxy

2002-11-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03429] https proxy
	* fm.h (HTTPS_proxy): added
		(HTTPS_proxy_parsed): added
	* main.c (main): check https_proxy
	* rc.c (CMT_HTTPS_PROXY): added
		(https_proxy): added
		(parse_proxy): HTTPS_proxy
	* url.c (openURL): for HTTPS, use HTTPS_proxy
		(schemeToProxy): HTTPS_proxy_parsed

2002-11-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03428] install manual as w3m.exe.1 on Cygwin
	* XMakefile (MAN1_TARGET): added
		(HELP_TARGET): added
		(install): use MAN1_TARGET, HELP_TARGET
		(uninstall): use MAN1_TARGET, uninstall HELP_TARGET

2002-11-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03427] Re: Select the nearest map area as default.
	* map.c (newMapArea): accept sign chars
			if points is not enough, return as SHAPE_UNKNOWN

2002-11-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03425] charset of title
	* display.c (displayBuffer): buffername converted to system coding
					for term title

2002-11-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03424] Content length
	* file.c (loadGeneralFile): current_content_length before do_download
		(save2tmp): current_content_length move before return

2002-11-12  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03422] Re: setting form on loading
	* form.c (loadPreForm): initialize name
			check textarea, name for /textarea

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03418] Re: tab browser
	* display.c (redrawNLine): s/clrtoeol/clrtoeolx/
				move rootY

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03417] install_w3mimgdisplay
	* configure: define install_w3mimgdisplay 
			after use_w3mimg_fb determined

2002-11-12  Akira TAGOH <at@gclab.org>

	* [w3m-dev 03415] fix a build issue for 64bit arch
	* gcmain.c: deleted
	* main.c: no need gcmain.c
		s/MAIN/main/