@@ -1,3 +1,9 @@
+2002-11-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03430] disable display of alarm command
+	* main.c (SigAlarm): remove display_message_nsec()
+		(setAlarm): show sec
+
 2002-11-15  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* NEWS: env,rc: https_proxy
@@ -4637,4 +4643,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.512 2002/11/14 16:58:28 ukai Exp $
+$Id: ChangeLog,v 1.513 2002/11/14 17:01:25 ukai Exp $
